GNOME Bugzilla – Bug 786684
Control center window resizes when sound panel is opened
Last modified: 2018-01-09 15:49:14 UTC
With the new gnome-control-center shell, the window is resizable. Unfortunately, when the sound panel is opened, the window's size changes - on my system it jumps from being 687px tall to become 952px tall. This is quite a sudden and dramatic change - it's unpleasant and surprising and is inconsistent with how windows are supposed to behave.
I don't think this is easily solvable without 1) a minimum width/height for all panels 2) a redesign of the sound panel. Adding scrollbars to the sound panel would just be lipstick on a pig at this point.
(In reply to Bastien Nocera from comment #1) ... > Adding scrollbars to the sound panel would just be lipstick on a pig at this > point. Might be worth it as a short-term fix. This bug isn't nice.
Created attachment 366301 [details] screenshot-sound-applications-tab-full I have experienced something similar today. The culprit seems to be epiphany having entries for each tab playing sound in the "Applications" list. See screenshot.
Created attachment 366302 [details] [review] sound: Embed the "Applications" tab content in a scrolled window The "Applications" tab might expand vertically indefinitely depending on the amount of applications playing sounds simultaneously. This causes the whole Control Center window to grow vertically. These changes pack the content of the "Applications" tab in a GtkScrolledWindow.
Created attachment 366546 [details] scrollbar on top of the switch The scrollbar ends up on top of the switches, which really doesn't look that good. Looks sound other than that. Please also add a reproducer in the commit message. I used gst-play-1.0: 1. Launch "gst-play-1.0 <music file>" 2. Press space to pause the playback 3. Press Ctrl+Z to send it into the background 4. Goto 1.
Review of attachment 366302 [details] [review]: As per comment 5.
Created attachment 366558 [details] [review] sound: Embed the "Applications" tab content in a scrolled window The "Applications" tab might expand vertically indefinitely depending on the amount of applications playing sounds simultaneously. This causes the whole Control Center window to grow vertically. To reproduce the issue you'd need to launch multiple sound sources. 1. Launch "gst-play-1.0 <music file>" 2. Press space to pause the playback 3. Press Ctrl+Z to send it into the background 4. Goto 1. These changes pack the content of the "Applications" tab in a GtkScrolledWindow. To avoid having the scrollbar overlapping the switchers, we set a 10px margin-end to the inner container.
Attachment 366558 [details] pushed as b3d51d9 - sound: Embed the "Applications" tab content in a scrolled window