sound: Embed the "Applications" tab content in a scrolled window

The "Applications" tab might expand vertically indefinitely depending
on the amount of applications playing sounds simultaneously. This
causes the whole Control Center window to grow vertically.

To reproduce the issue you'd need to launch multiple sound sources.
  1. Launch "gst-play-1.0 <music file>"
  2. Press space to pause the playback
  3. Press Ctrl+Z to send it into the background
  4. Goto 1.

These changes pack the content of the "Applications" tab in a
GtkScrolledWindow.

To avoid having the scrollbar overlapping the switchers, we set a
10px margin-end to the inner container.

https://bugzilla.gnome.org/show_bug.cgi?id=786684